fix(style): fixed color issues and alignment in various places

--- a/apps/client/src/app/pages/list-details/item-row/item-row.component.less
+++ b/apps/client/src/app/pages/list-details/item-row/item-row.component.less
@@ -107,6 +107,9 @@
 }
 
 .timers {
+  >div {
+    margin-bottom: 5px;
+  }
   ::ng-deep {
     .ant-btn-sm {
       line-height: 24px;
