--- a/apps/client/src/app/pages/list-details/list-details/list-details.component.less
+++ b/apps/client/src/app/pages/list-details/list-details/list-details.component.less
@@ -1,6 +1,9 @@
 .list-title, .alert, .note {
   margin-bottom: 5px;
 }
+.list-title {
+  padding-top: 20px;
+}
 
 h2 {
   margin-bottom: 0;
