--- a/apps/client/src/styles.less
+++ b/apps/client/src/styles.less
@@ -20,6 +20,10 @@ h1, h2, h3, h4, h5 {
   margin-top: 0 !important;
 }
 
+.ant-input-group-addon .ant-select-open .ant-select-selection, .ant-input-group-addon .ant-select-focused .ant-select-selection {
+  color: inherit !important;
+}
+
 .patreon-widget {
   > img {
     width: 175px;
