--- a/apps/client/src/theme.less
+++ b/apps/client/src/theme.less
@@ -80,6 +80,10 @@
   }
 }
 
+.ant-btn-background-ghost.ant-btn-primary {
+  color: var(--primary-color) !important;
+}
+
 .ant-spin-dot i {
   background-color: var(--primary-color) !important;
 }
